--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 click==7.1.2
 Flask==1.1.2
+Flask-Cors==3.0.10
+Flask-HTTPAuth==4.2.0
 flask-peewee==3.0.3
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 peewee==3.14.4
+six==1.15.0
 Werkzeug==1.0.1
 wtf-peewee==3.0.2
 WTForms==2.3.3
