--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 peewee==3.14.4
+PyJWT==1.7.1
 six==1.15.0
 Werkzeug==1.0.1
 wtf-peewee==3.0.2
